--- a/lab3/pkg/kernel/Cargo.toml
+++ b/lab3/pkg/kernel/Cargo.toml
@@ -5,6 +5,7 @@ edition.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+elf = {workspace = true}
 boot = { workspace = true }
 lazy_static = { workspace = true }
 uefi = { workspace = true }
