✨feat(0x05): implement spinlock and semaphore, add some app

--- a/lab5/pkg/app/dinner/Cargo.toml
+++ b/lab5/pkg/app/dinner/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "ysos_counter"
+name = "dinner"
 version.workspace = true
 edition.workspace = true
 
 [dependencies]
-lib = { workspace = true }
+lib  =  { workspace = true }
