✨feat(0x06): implement MbrTable parse and ata driver

--- a/lab6/pkg/kernel/Cargo.toml
+++ b/lab6/pkg/kernel/Cargo.toml
@@ -22,3 +22,4 @@ linked_list_allocator = { workspace = true }
 volatile = { workspace = true }
 xmas-elf = { workspace = true }
 syscall_def={package="ysos_syscall",workspace=true}
+storage = { package = "ysos_storage", path = "../storage" }
